# git-sync

./: .gitignore  Dockerfile  docker-compose.yml  git-sync.py  pyproject.toml
git-sync/: git_sync.py
git_sync/: git-sync.py
tests/: test_git_sync.py
