[tool.poetry]
name = "git-sync"
version = "0.1.0"
description = ""
authors = ["Maciej Gajewski-Kalaga <mgajewskik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"

[tool.poetry.scripts]
sync = "git_sync.git-sync:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.flakehell]
max_line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
